# shiny-octo-spork

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: dataset.py  hyperparameter_plot.py  mk_graph.py  model-check.ipynb  model.py  train_ann.py
